[package]
edition.workspace    = true
license.workspace    = true
name                 = "unavi-portal"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
bevy.workspace       = true
bevy_vrm.workspace   = true
unavi-constants.path = "../unavi-constants"

[dev-dependencies]
bevy_panorbit_camera = "0.33.1"
