[package]
edition.workspace    = true
license.workspace    = true
name                 = "unavi-script"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
anyhow.workspace          = true
bevy                      = { default-features = true, workspace = true }
bevy_async_task.workspace = true
futures.workspace         = true
tokio.workspace           = true
tracing.workspace         = true
wasmtime                  = "38.0.4"
wasmtime-wasi             = { default-features = false, version = "38.0.4" }

[dev-dependencies]
tracing-subscriber.workspace = true
