[package]
edition.workspace    = true
license.workspace    = true
name                 = "unavi-script"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
anyhow.workspace       = true
bevy                   = { default-features = true, workspace = true }
bevy-hsd.path          = "../bevy-hsd"
bevy-wds.path          = "../bevy-wds"
bevy_async_task        = "0.11.1"
bevy_vrm.workspace     = true
blake3.workspace       = true
bytemuck.workspace     = true
bytes.workspace        = true
futures.workspace      = true
loro.workspace         = true
rand.workspace         = true
smol_str.workspace     = true
tokio.workspace        = true
tracing.workspace      = true
unavi-agent.path       = "../unavi-agent"
unavi-avatar.path      = "../unavi-avatar"
unavi-wasm-compat.path = "../unavi-wasm-compat"
wasmtime               = "40.0.0"
wasmtime-wasi          = { default-features = false, version = "40.0.0" }
wds.path               = "../wds"
wired-schemas.path     = "../wired-schemas"

[dev-dependencies]
avian3d.workspace              = true
bevy_panorbit_camera.workspace = true
directories.workspace          = true
tracing-subscriber.workspace   = true
