[package]
name = "unavi-scripting"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bevy.workspace = true
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
wasm-bridge = { version = "0.4.0", features = ["component-model", "async"] }

[dev-dependencies]
bevy_panorbit_camera.workspace = true
tokio.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
tracing.workspace = true
