[package]
name = "unavi-scripting"
publish = false
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
avian3d.workspace = true
bevy.workspace = true
bevy_async_task.workspace = true
bevy_vr_controller.workspace = true
bevy_vrm.workspace = true
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
tokio.workspace = true
unavi-constants = { path = "../unavi-constants", features = ["physics"] }
unavi-player = { path = "../unavi-player" }
wasm-bridge = { git = "https://github.com/kayhhh/wasm-bridge.git", branch = "all", features = [
  "component-model",
  "async",
] }
wasm-bridge-wasi = { git = "https://github.com/kayhhh/wasm-bridge.git", branch = "all" }

[dev-dependencies]
bevy-inspector-egui.workspace = true
bevy_panorbit_camera.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
tracing.workspace = true
