[package]
edition.workspace    = true
license.workspace    = true
name                 = "unavi-server-service"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
anyhow.workspace  = true
bincode.workspace = true
semver            = { features = ["serde"], workspace = true }
serde.workspace   = true
tarpc.workspace   = true
xdid.workspace    = true
