[package]
edition.workspace    = true
license.workspace    = true
name                 = "unavi-server-service"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
bincode.workspace   = true
serde.workspace     = true
serde_vrm.workspace = true
tarpc.workspace     = true
xdid.workspace      = true
