[package]
name = "unavi-server-web"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http = { version = "0.4.4", features = ["fs"] }
tracing-subscriber.workspace = true
tracing.workspace = true
