[package]
name = "unavi-server-world"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
rcgen = "0.11.3" 
time = "0.3.30"
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
wtransport.workspace = true
