[package]
name = "unavi-server-world"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
rcgen = "0.13.1"
tokio.workspaced = true
tracing.workspace = true
wired-protocol = { path = "../wired-protocol" }
wtransport.workspace = true
