[package]
edition.workspace    = true
license.workspace    = true
name                 = "unavi-server"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[features]
devtools-console = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
anyhow.workspace      = true
axum.workspace        = true
axum-server           = { features = ["tls-rustls-no-provider"], version = "0.8.0" }
clap.workspace        = true
console-subscriber    = { optional = true, version = "0.5.0" }
directories.workspace = true
iroh                  = { default-features = true, workspace = true }
p256                  = "0.13.2"
tokio                 = { features = ["full"], workspace = true }
tower-http            = { features = ["cors"], version = "0.6.8" }
tracing.workspace     = true
tracing-subscriber    = { features = ["env-filter"], workspace = true }
wds.path              = "../wds"
xdid.workspace        = true
zeroize.workspace     = true
